--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -559,7 +559,7 @@
  	 	},
  	 	"healing1": {
  	 	 	"name": {
- 	 	 	 	"trans": "Alejarse",
+ 	 	 	 	"trans": "Balsamo",
  	 	 	 	"eng": "Pain Away"
  	 	 	},
  	 	 	"description": {
